# esp32-trm-bitnet

./: .gitignore  README.md  benchmark_single_puzzle.json  dissertation_graphs.py  evaluate_pytorch_baseline.py  evaluate_serial.py  generate_report.py  select_test_subset.py  split_remaining_into_4.py  split_subset_into_n.py  test_subset.json  test_subset_fp32_chunk_a.json  test_subset_fp32_chunk_b.json  test_subset_fp32_chunk_c.json
export/: export_ternary.py
firmware/: CMakeLists.txt  flash_all.sh  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
firmware/main/: CMakeLists.txt  attention.c  attention.h  benchmark.c  benchmark.h  main.c  model_config.h  model_loader.c  model_loader.h  rmsnorm.c  rmsnorm.h  simd_dotprod.S  trm_engine.c  trm_engine.h  trm_ternary.c  trm_ternary.h  trm_ternary_simd.c
results/: README.md  benchmark_float32_act1.json  benchmark_float32_act16.json  benchmark_float32_act1_unpack.json  results_esp32.json  results_esp32_act16_haltable_a.json  results_esp32_act16_haltable_b.json  results_esp32_act16_haltable_final_200_20260219_144204.json  results_esp32_act16_haltable_remaining_a.json  results_esp32_act16_haltable_remaining_b.json  results_esp32_act16_haltable_remaining_c_reassign_acm0.json  results_esp32_act16_haltable_remaining_c_reassign_acm1.json  results_esp32_act16_haltable_remaining_c_reassign_acm3.json  results_esp32_act16_haltable_remaining_d.json  results_pytorch_bitnet_with_emb_act1.json  results_pytorch_bitnet_with_emb_act16.json  results_pytorch_bitnet_with_emb_act16_trunc.json  (+4 more)
scripts/: dissertation_graphs.py  (+5 more)
(+48 files in other folders)
